[model] Fix scrollbar appearing in LOD configurator

--- a/bin/style.less
+++ b/bin/style.less
@@ -4542,6 +4542,7 @@ div.gradient-box {
 
 			div {
 				overflow-x: hidden;
+				overflow-y: hidden;
 				height:100%;
 			}
 
